@@ -1,6 +1,6 @@
 // ==UserScript==
 // @name     _experimental-poipoi
-// @version  85
+// @version  86
 // @grant    none
 // @run-at   document-end
 // @match    https://gikopoipoi.net/*
@@ -542,7 +542,7 @@ document.querySelector('head').appendChild(document.createElement('script').appe
   // 無視解除時
   var unignoreUser = vueApp.unignoreUser;
   vueApp.unignoreUser = function (userId) {
-    if (experimentalConfig.ignoreAll) {
+    if (experimentalConfig.ignoreAll === 1) {
       var trip = vueApp.users?.[userId]?.name?.match(/◆.{10}/)?.[0];
       if (trip) {
         if (!experimentalConfig.unignoreList)
@@ -573,7 +573,13 @@ document.querySelector('head').appendChild(document.createElement('script').appe
     if (match(userDTO.name, ['' + /[SＳ][YＹ][SＳ][TＴ][EＥ][MＭ]/]))
       userDTO.name += '(偽)';
     // 自動あぼーん
-    if (userDTO.id !== vueApp.myUserID && match(userDTO.name, experimentalConfig.autoBlock, experimentalConfig.filteringHelper) && vueApp.socket) {
+    if (
+      userDTO.id !== vueApp.myUserID && vueApp.socket &&
+      (
+        match(userDTO.name, experimentalConfig.autoBlock, experimentalConfig.filteringHelper) ||
+        (experimentalConfig.ignoreAll === 2 && !match(userDTO.name, experimentalConfig.unignoreList))
+      )
+    ) {
         vueApp.ignoreUser(userDTO.id);
         abon(userDTO.id);
         userDTO.aboned = true;
@@ -585,7 +591,7 @@ document.querySelector('head').appendChild(document.createElement('script').appe
       userDTO.id !== vueApp.myUserID &&
       (
         match(userDTO.name, experimentalConfig.autoIgnore, experimentalConfig.filteringHelper) ||
-        (experimentalConfig.ignoreAll && !match(userDTO.name, experimentalConfig.unignoreList))
+        (experimentalConfig.ignoreAll === 1 && !match(userDTO.name, experimentalConfig.unignoreList))
       )
     ) {
       vueApp.ignoreUser(userDTO.id);
